syntax="proto3";

package com.poker.protocols.texaspoker.proto; 

option java_package = "com.poker.protocols.texaspoker";
option java_outer_classname = "GameUserProto";

message GameUser{
	
	int32  seatId        = 1;
	int64  uid  		 = 2;
	string nick_name     = 3;
	string head_portrait = 4;
	int32  level         = 5;
	int64  chip_total    = 6;
	int64  chip 		 = 7;

	int32  play_status   = 8;
}

// protoc_3.5.1 --java_out=./src ./src/com/poker/protocols/texaspoker/proto/GameUser.proto 