syntax="proto3";

package com.poker.protocols.texaspoker.proto; 

option java_package = "com.poker.protocols.texaspoker";
option java_outer_classname = "TexasGameBroadcastUserActionProto";

message TexasGameBroadcastUserAction{  

	int32   seatId  		= 1;
	int32   operate 		= 2;
	int64   chip    		= 3;
	int64   round_chip      = 4;
}

// protoc_3.5.1 --java_out=./src ./src/com/poker/protocols/texaspoker/proto/TexasGameBroadcastUserAction.proto 